# ESREAL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
esreal/: infer.py  train.py
esreal/reward_server/: Dockerfile  build_tritonserver.sh  requirements.txt  run_tritonsdk.sh  run_tritonserver.sh
esreal/reward_server/GroundingDINO/: .gitignore
esreal/reward_server/model_repository/eva_clip/: config.pbtxt
esreal/reward_server/model_repository/eva_clip_infer/: config.pbtxt  config_cpu.pbtxt  config_gpu.pbtxt
esreal/reward_server/model_repository/eva_clip_pre/: config.pbtxt
esreal/reward_server/model_repository/open_clip/: config.pbtxt  input.json  input_pre.json  tmp.json
esreal/reward_server/model_repository/open_clip_infer/: config.pbtxt
esreal/reward_server/model_repository/open_clip_pre/: config.pbtxt
esreal/reward_server/model_repository/reward_model/: config.pbtxt
libs/LAVIS/lavis/configs/: default.yaml
libs/LAVIS/lavis/runners/: runner_base.py
libs/LAVIS/lavis/tasks/: vqa.py
libs/LLaVA/: setup.py  test_llava.py
libs/LLaVA/llava/: trlx_model_wrapper.py
libs/LLaVA/llava/eval/: run_llava.py
libs/LLaVA/llava/model/: builder.py
libs/mPLUG-Owl2/: test.py
libs/mPLUG-Owl2/mplug_owl2/: trlx_model_wrapper.py
libs/mPLUG-Owl2/mplug_owl2/model/: modeling_mplug_owl2.py
libs/trlx/trlx/: trlx.py
libs/trlx/trlx/data/: configs.py  ppo_types.py
libs/trlx/trlx/pipeline/: offline_pipeline.py  ppo_pipeline.py
libs/trlx/trlx/utils/: loading.py
scripts/: infer.sh  reward_server.sh  train.sh  train_srun.sh
(+48 files in other folders)
