[tool.poetry]
name = "esreal"
version = "0.1.0"
description = "Official PyTorch implementation of ESREAL"
authors = ["kmy17518 <kmy17518@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
